--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port=8080
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
 
-spring.datasource.url=jdbc:h2:file:~/dasboot
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://boyass-db.cwue1jzq8zkx.eu-west-1.rds.amazonaws.com:3306/boyasses
+spring.datasource.username=jonas
+spring.datasource.password=SvaretEr42!
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.max-active=10
 spring.datasource.max-idle=8
@@ -19,7 +19,7 @@ spring.datasource.time-between-eviction-runs-millis=1
 #flyway.baseline-on-migrate=true
 #spring.jpa.hibernate.ddl-auto=false;
 #
-#datasource.flyway.url=jdbc:h2:file:~/dasboot
-#datasource.flyway.username=sa
-#datasource.flyway.password=
-#datasource.flyway.driver-class-name=org.h2.Driver
+#datasource.flyway.url=jdbc:mysql://boyass-db.cwue1jzq8zkx.eu-west-1.rds.amazonaws.com:3306/boyasses
+#datasource.flyway.username=jonas
+#datasource.flyway.password=SvaretEr42!
+#datasource.flyway.driver-class-name=com.mysql.jdbc.Driver
