--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,18 @@ server.port=8080
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
 
-spring.datasource.url=jdbc:mysql://boyass-db.cwue1jzq8zkx.eu-west-1.rds.amazonaws.com:3306/boyasses
-spring.datasource.username=jonas
-spring.datasource.password=SvaretEr42!
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/boyasses
+spring.datasource.username=root
+spring.datasource.password=12345
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#spring.datasource.url=jdbc:mysql://boyass-db.cwue1jzq8zkx.eu-west-1.rds.amazonaws.com:3306/boyasses
+#spring.datasource.username=jonas
+#spring.datasource.password=SvaretEr42!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.max-active=10
@@ -19,6 +28,13 @@ spring.datasource.time-between-eviction-runs-millis=1
 #flyway.baseline-on-migrate=true
 #spring.jpa.hibernate.ddl-auto=false;
 #
+#spring.jpa.hibernate.ddl-auto = validate
+
+#flyway.url=jdbc:mysql://localhost:3306
+#flyway.schemas=boyasses
+#flyway.username=root
+#flyway.password=12345
+#flyway.driver-class-name=com.mysql.jdbc.Driver
 #datasource.flyway.url=jdbc:mysql://boyass-db.cwue1jzq8zkx.eu-west-1.rds.amazonaws.com:3306/boyasses
 #datasource.flyway.username=jonas
 #datasource.flyway.password=SvaretEr42!
